fix bugs before merge